Fixed: Date Picker popup not fully visible at larger zoom levels and smaller screens.

--- a/src/main/resources/resources/css/onsenMobileCustom.css
+++ b/src/main/resources/resources/css/onsenMobileCustom.css
@@ -259,6 +259,12 @@ ons-pull-hook#pull-hook + ons-tabbar#onsenTabbar {
 .page__content:has(.datalist-body-content .filter_form.show){
     overflow: hidden;
 }
+.page__content:has(.popup-picker){
+    overflow: hidden;
+}
+body:has(.popup-picker) {
+    overflow: visible;
+}
 #content .main-body-content {
     border: 0px;
 }
